Add font weights to font styles folder

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -1,2 +1,5 @@
-@import "./components";
-@import "./pages";
+@import "colors/colors.module.scss";
+// @import "colors";
+@import "fonts";
+@import "buttons";
+@import "components";
