--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -1,5 +1,14 @@
 @import "colors/colors.module.scss";
-// @import "colors";
-@import "fonts";
+@import "helper";
 @import "buttons";
 @import "components";
+@import "fonts";
+@import "pages";
+
+
+
+// idk?
+// body {
+//     margin: 0;
+//     text-align: center;
+// }
