--- a/web/src/styles/pages/_homepage.scss
+++ b/web/src/styles/pages/_homepage.scss
@@ -1,4 +1,4 @@
 // scss should always be 1 class extended, named by the name of the file
 .homepage {
-    // @extend .container;
+    @extend .container;
 }
