--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -8,7 +8,8 @@
 
 
 // idk?
-// body {
-//     margin: 0;
-//     text-align: center;
-// }
+body {
+    border: 5px solid red;
+    margin: 0;
+    // @extend .container;
+}
