--- a/web/src/styles/pages/_homepage.scss
+++ b/web/src/styles/pages/_homepage.scss
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-out;
-    // opacity: 0;
+    opacity: 0;
 
     &.active {
       opacity: 1;
