--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -6,10 +6,17 @@
 @import "pages";
 
 
-
 // idk?
-body {
-    border: 5px solid red;
-    margin: 0;
-    // @extend .container;
+
+html {
+    height: 100%;
+    body {
+        margin: 0;
+        height: 100%;
+        overflow-y: hidden;
+        #root {
+            height: 100%;
+        }
+    }
 }
+
