--- a/web/src/styles/components/homepage/_homepage-hero.scss
+++ b/web/src/styles/components/homepage/_homepage-hero.scss
@@ -3,6 +3,8 @@
     height: 100%;
     justify-content: center;
     align-items: center;
+    background: rgba(30, 30, 30, 0.59);
+
     
     &_background {
         z-index: -1;
@@ -19,31 +21,31 @@
     }
 
     &_content {
-        border: 3px solid yellowgreen;
         display: flex;
         justify-content: center;
         flex-direction: column;
 
         &_words {
-            border: 1px solid red;
             display: flex;
             flex-direction: column;
 
             &_header {
-                // TODO add real font stuff (import)
-                color: white;
-                font-size: 64px;
-                font-weight: 700;
-                margin: 0;
+                @include montserrat(700);
+                color: #FFFCF5;
+                font-size: 48px;
+                
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
     
             &_greeting {
-                // TODO add real font stuff (import)
-                font-size: 64px;
+                @include montserrat(100);
                 color: #FFFCF5;
+                font-size: 42px;
                 font-style: italic;
-                font-weight: 100;
-                margin: 0;
+
+
             }
         }
 
