Add hero partners and story to homepage to test scrolling

--- a/web/src/styles/pages/_homepage.scss
+++ b/web/src/styles/pages/_homepage.scss
@@ -1,5 +1,10 @@
 .homepage {
   border: 1px solid green;
-  height: 100%;
+  // height: 100%;
+
+  &-hero, &-partners, &-story {
+    background-color: green;
+    height: 100vh;
+  }
 }
 
