--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -13,7 +13,7 @@ html {
     body {
         margin: 0;
         height: 100%;
-        overflow-y: hidden;
+        // overflow-y: hidden;
         #root {
             height: 100%;
         }
