--- a/web/src/styles/components/Footer.scss
+++ b/web/src/styles/components/Footer.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     gap: 2rem;
 
     &_info {
@@ -34,7 +33,7 @@
 
     &_map {
       max-width: 30rem;
-
+      align-self: center;
     }
   }
 
