Style map to be responsive- todo: look into map libraries

--- a/web/src/styles/components/Footer.scss
+++ b/web/src/styles/components/Footer.scss
@@ -32,7 +32,10 @@
     }
 
     &_map {
-      max-width: 30rem;
+      object-fit: cover;
+      width: 100%;
+      height: 25rem;
+      // aspect-ratio: 2/3;
       align-self: center;
     }
   }
