Style hero button oops forgot to make new branch

--- a/web/src/styles/buttons/_footer-button.scss
+++ b/web/src/styles/buttons/_footer-button.scss
@@ -1,5 +1,7 @@
 .footer-button {
+  @include montserrat(500);
   background: transparent !important;
+  border: none;
   min-height: fit-content;
 
   &:hover {
