Refactor external links and create list to keep track of all external links in helpers

--- a/web/src/styles/pages/_homepage.scss
+++ b/web/src/styles/pages/_homepage.scss
@@ -1,9 +1,9 @@
 .homepage {
-  border: 1px solid green;
+  // border: 1px solid green;
   // height: 100%;
 
   &-hero, &-partners, &-story {
-    background-color: green;
+    // background-color: green;
     height: 100vh;
   }
 }
