--- a/web/src/styles/components/homepage/_homepage-hero.scss
+++ b/web/src/styles/components/homepage/_homepage-hero.scss
@@ -24,6 +24,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+        gap: 1rem;
 
         &_words {
             display: flex;
