--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -11,6 +11,7 @@
 html {
     height: 100%;
     body {
+        width: 100vw;
         margin: 0;
         height: 100%;
         // overflow-y: hidden;
