--- a/web/src/styles/components/homepage/_homepage-hero.scss
+++ b/web/src/styles/components/homepage/_homepage-hero.scss
@@ -29,32 +29,34 @@
         &_words {
             display: flex;
             flex-direction: column;
+            font-size: 42px;
+            // overflow-wrap: break-word;
 
             &_header {
                 @include montserrat(700);
                 color: #FFFCF5;
-                font-size: 48px;
                 
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
+                // white-space: nowrap;
+                // overflow: hidden;
+                // text-overflow: ellipsis;
             }
     
             &_greeting {
                 @include montserrat(100);
                 color: #FFFCF5;
-                font-size: 42px;
                 font-style: italic;
-
-
             }
         }
-
-        
 
         &_buttons {
             display: flex;
             gap: 25px;
         }
+    }
+}
+
+@media (min-width: 769px) {
+    .homepage-hero {
+        justify-content: baseline !important;
     }
 }
