--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -11,13 +11,27 @@
 html {
     height: 100%;
     body {
-        width: 100vw;
         margin: 0;
         height: 100%;
         // overflow-y: hidden;
         #root {
             height: 100%;
+
+            .fade-overlay {
+                position: absolute;
+                top: 0;
+                height: 100vh;
+                width: 100%;
+                // z-index: 10;
+                background-color: $black;
+                animation: fadeOut 1s ease-out forwards;
+            }
         }
     }
 }
 
+@keyframes fadeOut {
+    100% {
+        background-color: transparent;
+    }
+}
