--- a/web/src/styles/components/Footer.scss
+++ b/web/src/styles/components/Footer.scss
@@ -43,7 +43,7 @@
     display: flex;
     color: $yellow;
     font-size: 15px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
     gap: 1rem;
