--- a/web/src/styles/components/homepage/_homepage-hero.scss
+++ b/web/src/styles/components/homepage/_homepage-hero.scss
@@ -1,6 +1,6 @@
 .homepage-hero {
     display: flex;
-    height: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
     background: rgba(30, 30, 30, 0.59);
