--- a/web/src/styles/buttons/_footer-button.scss
+++ b/web/src/styles/buttons/_footer-button.scss
@@ -3,6 +3,7 @@
   background: transparent !important;
   border: none;
   min-height: fit-content;
+  padding: 0;
 
   &:hover {
     color: $white;
