--- a/web/src/styles/components/homepage/_homepage-hero.scss
+++ b/web/src/styles/components/homepage/_homepage-hero.scss
@@ -12,10 +12,12 @@
         left: 0;
         width: 100%;
         height: 100%;
+        
         &_img {
             height: 100%;
             width: 100%;
             object-fit: cover;
+            
         }
     }
 
@@ -60,6 +62,7 @@
 
         &_content {
             margin-left: 10vw;
+            margin-top: 5rem;
 
             &_words {
                 font-size: 50px;
