--- a/web/src/styles/components/homepage/_homepage-partners.scss
+++ b/web/src/styles/components/homepage/_homepage-partners.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   gap: 4rem;
-  padding: 4rem;
+  padding: 0 4rem;
 
   &_left {
     display: flex;
@@ -13,12 +13,13 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    width: fit-content;
-
+    height: 100vh;
+    
     &_companies {
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      width: fit-content;
 
       img {
         mix-blend-mode: multiply;
@@ -30,7 +31,9 @@
     font-size: 36px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 3rem;
+    height: 100vh;
   }
 }
 
@@ -38,11 +41,11 @@
   .homepage-partners {
     flex-direction: row;
     height: 100vh;
-    // padding: 4rem;
     gap: 2rem;
 
     &_left, &_right {
       max-width: 40rem;
+      height: fit-content;
     }
 
     &_left {
