--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -14,6 +14,7 @@ html {
         margin: 0;
         height: 100%;
         // overflow-y: hidden;
+        background-color: $black;
         #root {
             height: 100%;
 
