--- a/web/src/styles/components/PageHeader.scss
+++ b/web/src/styles/components/PageHeader.scss
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 20rem;
+  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -22,5 +23,21 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
+
+  &_menu-sections {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-self: baseline;
+    width: 100vw;
+    
+    overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
