--- a/web/src/styles/components/PageHeader.scss
+++ b/web/src/styles/components/PageHeader.scss
@@ -16,7 +16,7 @@
   align-items: center;
   gap: 1rem;
 
-  &_name {
+  &_title {
     font-size: 48px;
   }
 
@@ -28,17 +28,16 @@
 
   &_menu-sections {
     background-color: #1e1e1e4a;
+    display: flex;
     position: absolute;
     bottom: 0;
-    display: flex;
     width: 100vw;
-
     overflow: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 
     &::-webkit-scrollbar {
-      display: none;
+      display: none; /* Chrome */
     }
   }
 }
