Apply focus styles to buttons and links

--- a/web/src/styles/components/index.scss
+++ b/web/src/styles/components/index.scss
@@ -1,4 +1,4 @@
-@import "Navbar";
-@import "Footer";
-@import "PageHeader";
+@import "navbar";
+@import "footer";
 @import "homepage";
+@import "menus";
