--- a/web/src/styles/buttons/_main-button-example.scss
+++ b/web/src/styles/buttons/_main-button-example.scss
@@ -31,7 +31,7 @@ $main-button-example-border: 1px solid;
             color: $yellow;
             background-color: $white;
 
-            &:hover {
+            &:hover, &:focus {
                 color: $yellow;
                 background-color: $black;
             }
@@ -41,7 +41,7 @@ $main-button-example-border: 1px solid;
             color: $white;
             background-color: $transparentBlack;
 
-            &:hover {
+            &:hover, &:focus {
                 color: $yellow;
                 // background-color: $black;
             }
@@ -51,7 +51,7 @@ $main-button-example-border: 1px solid;
             color: $white;
             background-color: $black;
 
-            &:hover {
+            &:hover, &:focus {
                 color: $yellow;
                 background-color: $white;
             }
