--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -6,12 +6,14 @@
 @import "pages";
 
 
-// idk?
+* {
+    margin: 0;
+    padding: 0;
+}
 
 html {
     height: 100%;
     body {
-        margin: 0;
         height: 100%;
         // overflow-y: hidden;
         background-color: $black;
@@ -25,6 +27,11 @@ html {
                 width: 100%;
                 background-color: $black;
                 animation: fadeOut 1s ease-out forwards;
+
+            }
+            
+            li {
+                list-style-type: none;
             }
         }
     }
