--- a/web/src/styles/components/homepage/_homepage-story.scss
+++ b/web/src/styles/components/homepage/_homepage-story.scss
@@ -1,14 +1,19 @@
 .homepage-story {
   background-color: $white;
-  height: 100vh;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 2rem;
   text-align: center;
   font-size: 24px;
-  padding: 2rem;
+  padding: 4rem 2rem;
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
 
   &_first {
     
@@ -33,6 +38,8 @@
 
 @media (min-width: 769px) {
   .homepage-story {
+    padding-bottom: 10rem;
+
     &_first, &_second {
       max-width: 50rem;
       font-size: 36px;
