--- a/web/src/styles/pages/_homepage.scss
+++ b/web/src/styles/pages/_homepage.scss
@@ -1,5 +1,7 @@
 .homepage {
-  // border: 1px solid green;
-  // height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
