--- a/web/src/styles/fonts/_my-google-font-name.scss
+++ b/web/src/styles/fonts/_my-google-font-name.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,700;1,100;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,100;1,400&display=swap');
 
 // create standard variable default with defautl weight
 @mixin montserrat($font-weight: 500) {
@@ -13,6 +13,10 @@
 
 .montserrat_thin {
     @include montserrat(100);
+}
+
+.montserrat_regular {
+    @include montserrat(400);
 }
 
 .montserrat_medium {
