--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -15,6 +15,7 @@
 html {
     height: 100%;
     body {
+        @include montserrat;
         height: 100%;
         // overflow-y: hidden;
         background-color: $black;
