Add todo items to readme

--- a/web/src/styles/components/_footer.scss
+++ b/web/src/styles/components/_footer.scss
@@ -34,7 +34,18 @@
         }
 
         &_content {
+          display: flex;
+          flex-direction: column;
           color: $white;
+
+          a {
+            color: $white;
+
+            &:hover {
+              color: $yellow;
+              transition-duration: 200ms;
+            }
+          }
         }
       }
     }
