--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -36,6 +36,10 @@ html {
             li {
                 list-style-type: none;
             }
+
+            a {
+                text-decoration: none;
+            }
         }
     }
 }
