Fix mobile nav bug when on menu

--- a/web/src/styles/components/_footer.scss
+++ b/web/src/styles/components/_footer.scss
@@ -41,7 +41,7 @@
           a {
             color: $white;
 
-            &:hover {
+            &:hover, &:focus {
               color: $yellow;
               transition-duration: 200ms;
             }
