--- a/web/src/styles/components/menus/_menu-nav.scss
+++ b/web/src/styles/components/menus/_menu-nav.scss
@@ -7,13 +7,13 @@
   align-items: flex-end;
   
   position: sticky;
-  top: 60px;
+  top: 0;
   padding-block: 1rem;
   z-index: 10;
 
   width: 100vw;
   // height: 120px;
-  background-color: $black;
+  background-color: rgba($black, 0.9);
 
   overflow: scroll;
   -ms-overflow-style: none;  /* IE and Edge */
@@ -29,5 +29,6 @@
 
   @media (min-width: 768px) {
     gap: 3rem;
+    top: 4.5rem;
   }
 }
