Organize style files and make page transitions smoother

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,2 +1,15 @@
 @import "homepage";
 @import "menu-page";
+
+.page {
+  animation: fadeIn 200ms ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
