--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -31,6 +31,7 @@
           @include montserrat(500);
           color: $yellow;
           margin-bottom: 1rem;
+          font-size: 2rem;
         }
 
         &_content {
