--- a/src/styles/pages/_menu-page.scss
+++ b/src/styles/pages/_menu-page.scss
@@ -2,7 +2,7 @@
   &_sections {
     display: grid;
     gap: 4rem;
-    padding: 4rem 2rem;
+    padding: 2rem;
 
     &_drinks-header {
       @extend .menu-section_header;
