--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -18,6 +18,7 @@
 
   &_title {
     font-size: 48px;
+    text-align: center;
   }
 
   &_buttons {
@@ -25,21 +26,6 @@
     flex-direction: column;
     gap: 1rem;
   }
-
-  // &_menu-sections {
-  //   background-color: #1e1e1e4a;
-  //   display: flex;
-  //   position: absolute;
-  //   bottom: 0;
-  //   width: 100vw;
-  //   overflow: scroll;
-  //   -ms-overflow-style: none;  /* IE and Edge */
-  //   scrollbar-width: none;  /* Firefox */
-
-  //   &::-webkit-scrollbar {
-  //     display: none; /* Chrome */
-  //   }
-  // }
 }
 
 @media (min-width: 508px) {
