--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -6,8 +6,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding: 8rem 1rem;
   position: relative;
 
   display: flex;
