--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   @include montserrat(700);
   color: $white;
-  background: $blackFade, url('/menu-bg.png');
+  background: $blackFade, url('/D11/menu-bg.png');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
