--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -43,7 +43,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     z-index: 1;
     background-color: $black;
     display: flex;
