Change background photos and add bg to error page

--- a/src/styles/buttons/_main-button-example.scss
+++ b/src/styles/buttons/_main-button-example.scss
@@ -10,6 +10,7 @@ $main-button-example-border: 1px solid;
     min-height: $main-button-example-height;
     padding: 0 1rem;
     text-decoration: none;
+    text-align: center;
     border: $main-button-example-border;
     border-radius: 50px;
     cursor: pointer;
