--- a/src/styles/components/homepage/_homepage-story.scss
+++ b/src/styles/components/homepage/_homepage-story.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   text-align: center;
   font-size: 24px;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 6rem 2rem;
 
   .wrapper {
     display: flex;
