Bold bottle names and refactor diet table width css

--- a/src/styles/components/menus/drinks/_bottle-item.scss
+++ b/src/styles/components/menus/drinks/_bottle-item.scss
@@ -5,6 +5,10 @@
 
     &_words {
 
+      &_name {
+        font-weight: 700;
+      }
+
       &_alcohol-content {
         font-style: italic;
         color: $yellow;
