--- a/src/styles/components/menus/food/_diet-table.scss
+++ b/src/styles/components/menus/food/_diet-table.scss
@@ -7,6 +7,8 @@
   justify-self: center;
   border-top: solid $white 1px;
   padding-top: 2rem;
+  width: 100%;
+  max-width: 700px;
   
   li {
     display: flex;
@@ -16,6 +18,5 @@
   
   @media (min-width: 768px) {
     grid-template-columns: repeat(3, 1fr);
-    width: 700px;
   }
 }
