--- a/src/styles/components/homepage/_homepage-partners.scss
+++ b/src/styles/components/homepage/_homepage-partners.scss
@@ -27,9 +27,15 @@
       gap: 1rem;
       width: fit-content;
 
-      img {
-        mix-blend-mode: multiply;
+      li {
+        display: flex;
+        justify-content: center;
+        
+        img {
+          mix-blend-mode: multiply;
+        }
       }
+
     }
   }
 
