--- a/src/styles/pages/_error-page.scss
+++ b/src/styles/pages/_error-page.scss
@@ -1,6 +1,7 @@
 .error-page {
   @extend .homepage-hero;
   background: url("/D11/error.webp") center no-repeat;
+  background-size: cover;
 
   @media (min-width: 769px) {
     background-attachment: fixed;
