--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,17 +1,16 @@
 .footer {
-  background: $black;
   @include montserrat;
+  background: $black;
   padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   .wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
-
   }
 
   &_top {
@@ -26,7 +25,6 @@
       gap: 3rem;
 
       &_item {
-
         &_header {
           @include montserrat(500);
           color: $yellow;
@@ -42,7 +40,8 @@
           a {
             color: $white;
 
-            &:hover, &:focus {
+            &:hover,
+            &:focus {
               color: $yellow;
               transition-duration: 200ms;
             }
@@ -78,21 +77,18 @@
       gap: 1rem;
     }
   }
-}
 
-@media (min-width: 577px) {
-  .footer {
+  @media (min-width: 577px) {
     &_bottom {
       flex-direction: row;
       justify-content: space-between;
       align-items: flex-end;
     }
   }
-}
 
-@media (min-width: 993px) {
-  .footer {
+  @media (min-width: 993px) {
     padding: 4rem 8rem;
+
     &_top {
       flex-direction: row;
     }
