--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   @include montserrat(700);
   color: $white;
-  background: url('/D11/menu-bg.webp');
+  background: url("/D11/menu-bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 6rem 2rem;
@@ -36,20 +36,16 @@
     flex-direction: column;
     gap: 1rem;
   }
-}
 
-@media (min-width: 508px) {
-  .page-header {
+  @media (min-width: 508px) {
     background-position-y: 95%;
 
     &_menu-sections {
       justify-content: center;
     }
   }
-}
 
-@media (min-width: 768px) {
-  .page-header {
+  @media (min-width: 768px) {
     background-attachment: fixed;
     background-position-y: 95%;
     padding-top: 10rem;
