--- a/src/styles/components/menus/food/_menu-item.scss
+++ b/src/styles/components/menus/food/_menu-item.scss
@@ -5,7 +5,6 @@
     gap: 1rem;
 
     &_words {
-
       p {
         font-style: italic;
         line-height: 1.3rem;
@@ -13,9 +12,10 @@
 
       header {
         font-weight: 700;
-      }  
+      }
 
-      header, span {
+      header,
+      span {
         display: inline;
         margin-right: 0.5rem;
       }
@@ -27,7 +27,7 @@
 
       &_diets {
         display: inline;
-        
+
         img {
           margin-right: 0.25rem;
           width: 1rem;
@@ -51,8 +51,10 @@
       header {
         font-weight: 700;
       }
-  
-      span, header, p {
+
+      span,
+      header,
+      p {
         display: inline;
         margin-right: 0.5rem;
       }
