Clean up styles folder

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,8 @@
-@import "colors/colors.module.scss";
+@import "colors";
 @import "fonts";
 @import "buttons";
 @import "components";
-@import "helper";
+@import "helpers";
 @import "pages";
 
 * {
