--- a/src/styles/components/homepage/_homepage-hero.scss
+++ b/src/styles/components/homepage/_homepage-hero.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   padding-inline: 2rem;
-  background: url("/D11/hero.webp") center no-repeat;
+  background: url("/hero.webp") center no-repeat;
   background-size: cover;
   position: relative;
   z-index: 1;
