--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   @include montserrat(700);
   color: $white;
-  background: url("/D11/menu-bg.webp");
+  background: url("/menu-bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 6rem 2rem;
