--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -35,6 +35,7 @@
         &_content {
           display: flex;
           flex-direction: column;
+          white-space: pre-wrap;
           color: $white;
 
           a {
