--- a/src/styles/components/menus/_page-header.scss
+++ b/src/styles/components/menus/_page-header.scss
@@ -26,9 +26,19 @@
     z-index: -1;
   }
 
-  &_title {
-    font-size: 48px;
-    text-align: center;
+  &_heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &_title {
+      font-size: 48px;
+      text-align: center;
+    }
+
+    &_blurb {
+      margin-bottom: 1rem;
+    }
   }
 
   &_buttons {
