Restyle drink items

--- a/src/styles/components/menus/drinks/_bottle-item.scss
+++ b/src/styles/components/menus/drinks/_bottle-item.scss
@@ -6,6 +6,8 @@
     &_words {
       &_name {
         font-weight: 700;
+        color: $white !important;
+        font-style: normal !important;
       }
 
       &_alcohol-content {
