--- a/src/styles/components/menus/drinks/_tap-item.scss
+++ b/src/styles/components/menus/drinks/_tap-item.scss
@@ -4,8 +4,14 @@
     justify-content: space-between;
 
     &_words {
+      &_brewery, &_name {
+        color: $white !important;
+        font-style: normal !important;
+        margin-right: 0.25rem !important;
+      }
+
       &_brewery {
-        font-weight: 700;
+        font-weight: 700 !important;
       }
 
       &_alcohol-content {
